<resources>
    <string name="app_name">StoryApp</string>
    <string name="content_description_media">The picture from list story</string>
    <string name="title">Creator Name</string>
    <string name="description">Description</string>
    <string name="welcome_title">Welcome to Story App</string>
    <string name="description_welcome">Do you want to share stories related to technology? You must use this Story App so your friends can see!</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="name">Name</string>
    <string name="content_description_register">Image of layout register</string>
    <string name="email">Email</string>
    <string name="title_signup">Please fill up your data</string>
    <string name="password">Password</string>
    <string name="content_description_login">Layout Image of Login</string>
    <string name="title_login">Filled up your registered account below</string>
    <string name="content_description_welcome">Image of layout Welcome Activity</string>
    <string name="logout">Logout</string>
    <string name="content_description_fab">Add Story Button</string>
    <string name="list_story">List Story</string>
    <string name="camera_button">Camera</string>
    <string name="gallery_button">Gallery</string>
    <string name="upload_button">Upload</string>
    <string name="empty_image_warning">Please add image file first.</string>
    <string name="story_empty">Story not Found</string>
    <string name="logout_reminder">Are you sure want to logout?</string>
    <string name="cancel">Cancel</string>
    <string name="password_warn">"Password cannot be less than 8 characters"</string>
    <string name="email_warn">Invalid Email Format</string>
    <string name="input_email">Input Your Email</string>
    <string name="input_name">Input Your Name</string>
    <string name="input_password">Input Your Password</string>
    <string name="name_error">Name can not be empty</string>
    <string name="email_error">Email can not be empty</string>
    <string name="password_error">Password can not be empty</string>
    <string name="success">Congrats!</string>
    <string name="next">Next</string>
    <string name="map">map</string>
    <string name="title_activity_maps">Maps</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Try again</string>
    <string name="preview_image_illustration">Preview Image Illustration</string>
    <string name="checkLocation">Enable Location</string>
    <string name="loc_not_found">Location is not found. Try Again</string>
    <string name="loc_found">Location found</string>
</resources>